force-app/main/default/objects/Space__c/Space__c.object-meta.xml
<CustomObject>
    <description>The spaces that exist within Bitwise Industries (i.e buildings and rooms within)</description>
    <label>Space</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Common Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>