force-app/main/default/objects/Space__c/fields/Actual_Price_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Actual_Price_Sq_ft__c</fullName>
    <description>The actual price per square foot charged per the lease agreement</description>
    <inlineHelpText>Shows the actual price per square foot charged calculated from the lease agreement.</inlineHelpText>
    <label>Actual Price (Sq ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>