force-app/main/default/objects/Space__c/fields/Calendar__c.field-meta.xml
<CustomField>
    <fullName>Calendar__c</fullName>
    <description>Created By: MV 
Business Unit: Hashtag reservable rooms calendar 
Purpose: hyperlink to google calendar
Populated: Automatic</description>
    <formula>HYPERLINK(&quot;https://calendar.google.com/calendar?cid=&quot;&amp;   Calendar_ID__c  , 

 Calendar_ID__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar</label>
    <type>Text</type>
</CustomField>