force-app/main/default/objects/Space__c/fields/Calendar_Date__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Date__c</fullName>
    <description>CC Hashtag Update Date for Calendar Link Auto</description>
    <formula>SUBSTITUTE(TEXT(TODAY()),&apos;-&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Date</label>
    <type>Text</type>
</CustomField>