force-app/main/default/objects/Space__c/fields/Calendar_ID__c.field-meta.xml
<CustomField>
    <fullName>Calendar_ID__c</fullName>
    <description>JA
Business Unit: Hashtag
Purpose: Store Related Google Calendar Id
Population: Manual</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Calendar ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>