force-app/main/default/objects/Space__c/fields/Calendar_Link__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Link__c</fullName>
    <formula>&quot;https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=&quot; &amp; Calendar_Source_Id__c  
    &amp; &quot;&amp;color=%2322AA99&amp;mode=day&amp;showCalendars=0&amp;showTabs=0&amp;showTitle=1&amp;showNav=1&amp;showPrint=0&amp;dates=&quot; &amp; Calendar_Date__c &amp; &quot;/&quot; &amp; Calendar_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Link</label>
    <type>Text</type>
</CustomField>