force-app/main/default/objects/Space__c/fields/Calendar_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Source_Id__c</fullName>
    <formula>SUBSTITUTE( Calendar_ID__c, &apos;@&apos;, &apos;%40&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Source Id</label>
    <type>Text</type>
</CustomField>