force-app/main/default/objects/Space__c/fields/Checked_Out_By__c.field-meta.xml
<CustomField>
    <fullName>Checked_Out_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For use on Lockers - the Contact who this locker is checked out by.</description>
    <label>Checked Out By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lockers</relationshipLabel>
    <relationshipName>Lockers</relationshipName>
    <type>Lookup</type>
</CustomField>