force-app/main/default/objects/Space__c/fields/Classroom__c.field-meta.xml
<CustomField>
    <fullName>Classroom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CC Leasing Mark a space as a Classroom space Manual</description>
    <label>Classroom</label>
    <type>Checkbox</type>
</CustomField>