force-app/main/default/objects/Space__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Created by JW
For use in Lease Templates.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The company name of this building.</inlineHelpText>
    <label>Company Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>