force-app/main/default/objects/Space__c/fields/Cowork_Reservable__c.field-meta.xml
<CustomField>
    <fullName>Cowork_Reservable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, space status will always be set to available.</inlineHelpText>
    <label>Cowork Reservable</label>
    <type>Checkbox</type>
</CustomField>