force-app/main/default/objects/Space__c/fields/Features_Amenities__c.field-meta.xml
<CustomField>
    <fullName>Features_Amenities__c</fullName>
    <description>The features/amenities of the space</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What are the features/amenities of the space?</inlineHelpText>
    <label>Features/Amenities</label>
    <type>TextArea</type>
</CustomField>