force-app/main/default/objects/Space__c/fields/isProperty__c.field-meta.xml
<CustomField>
    <fullName>isProperty__c</fullName>
    <formula>RecordType.DeveloperName = &apos;Property&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isProperty (do not display)</label>
    <type>Checkbox</type>
</CustomField>