force-app/main/default/objects/Space__c/fields/Leasable__c.field-meta.xml
<CustomField>
    <fullName>Leasable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CC Leasing Mark a space as a Leasable space even if occupied Manual</description>
    <label>Leasable</label>
    <type>Checkbox</type>
</CustomField>