force-app/main/default/objects/Space__c/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>Created By: MV 
Business Unit: Leasing Users 
Purpose: To track legal name
Populated: Manually</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>