force-app/main/default/objects/Space__c/fields/Locker_Size__c.field-meta.xml
<CustomField>
    <fullName>Locker_Size__c</fullName>
    <description>Created by JW
For use on the &quot;Locker&quot; page layout to denote the size of a reservable locker.</description>
    <label>Locker Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>