force-app/main/default/objects/Space__c/fields/Market_Price_Sq__c.field-meta.xml
<CustomField>
    <fullName>Market_Price_Sq__c</fullName>
    <description>The current market rate per square foot downtown.</description>
    <inlineHelpText>What is the current market rate per square foot downtown?</inlineHelpText>
    <label>Market Price (Sq ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>