force-app/main/default/objects/Space__c/fields/Market_Rent_mo__c.field-meta.xml
<CustomField>
    <fullName>Market_Rent_mo__c</fullName>
    <description>JA
Business Unit: Leasing
Purpose: Display the market rent for the suite</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>How much rent is the suite monthly?</inlineHelpText>
    <label>Market Rent (mo)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>