force-app/main/default/objects/Space__c/fields/Occupant__c.field-meta.xml
<CustomField>
    <fullName>Occupant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: JA
Business Unit: Leasing
Purpose: Track the occupant of a Desk Hotel workstation</description>
    <inlineHelpText>Who leases the workstation?</inlineHelpText>
    <label>Occupant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Spaces (Occupant)</relationshipLabel>
    <relationshipName>Spaces</relationshipName>
    <type>Lookup</type>
</CustomField>