force-app/main/default/objects/Space__c/fields/Public_URL__c.field-meta.xml
<CustomField>
    <fullName>Public_URL__c</fullName>
    <description>DR - Link to open the public page for hashtag conference rooms</description>
    <formula>HYPERLINK(&apos;https://bitwiseindustries.secure.force.com/tabletreservation?id=&apos; +  Id , &apos;Open Page&apos; , &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Public URL</label>
    <type>Text</type>
</CustomField>