force-app/main/default/objects/Space__c/fields/Reservable__c.field-meta.xml
<CustomField>
    <fullName>Reservable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CC Leasing Mark a space as a Reservable space Manual</description>
    <label>Reservable</label>
    <type>Checkbox</type>
</CustomField>