force-app/main/default/objects/Space__c/fields/Reservation_Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Room_Type__c</fullName>
    <description>Created By: DA
Business Unit: Hashtag
Purpose: Defines the type of reservation space</description>
    <label>Reservation Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference Room</fullName>
            </value>
            <value>
                <fullName>Podcast Booth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>