force-app/main/default/objects/Space__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>HYPERLINK(&quot;http://maps.google.com/maps?f=q&amp;hl=en&amp;q=&quot;&amp;Shipping_Street__c&amp;&quot;+&quot;&amp;Shipping_City__c&amp;&quot;,+&quot;&amp;Shipping_State__c&amp;&quot;+&quot;&amp;Shipping_Zip_Postal_Code__c&amp;&quot;+&quot;&amp;Shipping_Country__c&amp;&quot; &amp;om=1&quot;, Shipping_Street__c &amp; &quot; &quot; &amp;
Shipping_City__c &amp; &quot; &quot; &amp; Shipping_State__c &amp; &quot; &quot; &amp;
Shipping_Zip_Postal_Code__c &amp; &quot; &quot; &amp; Shipping_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>