force-app/main/default/objects/Space__c/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping City</label>
    <length>75</length>
    <type>Text</type>
</CustomField>