force-app/main/default/objects/Space__c/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping State/Province</label>
    <length>70</length>
    <type>Text</type>
</CustomField>