force-app/main/default/objects/Space__c/fields/Site_Location__c.field-meta.xml
<CustomField>
    <fullName>Site_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The building the Room is located in.</description>
    <label>Site/Location</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Space__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Property</value>
        </filterItems>
        <filterItems>
            <field>Space__c.Name</field>
            <operation>equals</operation>
            <value>Desk Hotel</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Space__c</referenceTo>
    <relationshipLabel>Spaces (Site/Location)</relationshipLabel>
    <relationshipName>Spaces2</relationshipName>
    <type>Lookup</type>
</CustomField>