force-app/main/default/objects/Space__c/fields/Size_Sq__c.field-meta.xml
<CustomField>
    <fullName>Size_Sq__c</fullName>
    <description>The square footage of a space.</description>
    <inlineHelpText>How many square feet is in the space?</inlineHelpText>
    <label>Size (Sq ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>