force-app/main/default/objects/Space__c/fields/Spaces_Available__c.field-meta.xml
<CustomField>
    <fullName>Spaces_Available__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spaces Available</label>
    <referenceTo>Space__c</referenceTo>
    <relationshipLabel>Spaces Available</relationshipLabel>
    <relationshipName>Spaces</relationshipName>
    <type>Lookup</type>
</CustomField>