force-app/main/default/objects/Space__c/fields/Spaces_Unavailable__c.field-meta.xml
<CustomField>
    <fullName>Spaces_Unavailable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lists the spaces occupied</description>
    <inlineHelpText>Lists the spaces occupied</inlineHelpText>
    <label>Spaces Unavailable</label>
    <referenceTo>Space__c</referenceTo>
    <relationshipLabel>Spaces Occupied</relationshipLabel>
    <relationshipName>Spaces1</relationshipName>
    <type>Lookup</type>
</CustomField>