force-app/main/default/objects/Space__c/fields/Suggested_Price__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Price__c</fullName>
    <description>The current suggested rate per square foot.</description>
    <formula>Market_Price_Sq__c  * 1.15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The suggested rate per square foot.</inlineHelpText>
    <label>Suggested Price (Sq ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>