force-app/main/default/objects/Space__c/fields/Suggested_Rent_Mo__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Rent_Mo__c</fullName>
    <description>The suggested monthly rent calculated by (suggested rate* sq ft)</description>
    <formula>Suggested_Price__c *  Size_Sq__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calculated suggested monthly rent by (Suggested Rate (per Sq Ft * Square Feet)</inlineHelpText>
    <label>Suggested Rent (Mo)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>