force-app/main/default/objects/Space__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>JA
Business Unit: BW Leasing
Field Purpose: Track which account currently leases the suite/space
Population: Process Builder</description>
    <inlineHelpText>Who occupies the space?</inlineHelpText>
    <label>Tenant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Spaces</relationshipLabel>
    <relationshipName>Spaces</relationshipName>
    <type>Lookup</type>
</CustomField>