force-app/main/default/objects/Space__c/recordTypes/Locker.recordType-meta.xml
<RecordType>
    <fullName>Locker</fullName>
    <active>true</active>
    <description>A locker that can be leased out to a Hashtag member</description>
    <label>Locker</label>
</RecordType>