force-app/main/default/objects/Space__c/recordTypes/Property.recordType-meta.xml
<RecordType>
    <fullName>Property</fullName>
    <active>true</active>
    <description>A property/building owned that is part of the Bitwise campus.</description>
    <label>Property</label>
</RecordType>