force-app/main/default/objects/Space__c/recordTypes/Suite.recordType-meta.xml
<RecordType>
    <fullName>Suite</fullName>
    <active>true</active>
    <description>A room within a building on the Bitwise campus</description>
    <label>Suite</label>
</RecordType>