force-app/main/default/objects/Space__c/recordTypes/Workstation.recordType-meta.xml
<RecordType>
    <fullName>Workstation</fullName>
    <active>true</active>
    <description>A desk/workstation in Bitwise&apos;s Desk Hotel.</description>
    <label>Workstation</label>
</RecordType>