force-app/main/default/objects/Space__c/listViews/All_Properties.listView-meta.xml
<ListView>
    <fullName>All_Properties</fullName>
    <columns>NAME</columns>
    <columns>Size_Sq__c</columns>
    <columns>Status__c</columns>
    <columns>Company_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Space__c.Property</value>
    </filters>
    <label>All Properties</label>
    <sharedTo>
        <group>BLDG_Team</group>
        <group>Leasing_Team</group>
        <group>SF_Admin_Team</group>
        <group>Tech_Support_Team</group>
    </sharedTo>
</ListView>