force-app/main/default/objects/Space__c/listViews/All_Suites.listView-meta.xml
<ListView>
    <fullName>All_Suites</fullName>
    <columns>NAME</columns>
    <columns>Legal_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Tenant__c</columns>
    <columns>Size_Sq__c</columns>
    <columns>Market_Rent_mo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Space__c.Suite</value>
    </filters>
    <filters>
        <field>Leasable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Suites</label>
    <sharedTo>
        <group>BLDG_Team</group>
        <group>Leasing_Team</group>
        <group>SF_Admin_Team</group>
        <group>Tech_Support_Team</group>
    </sharedTo>
</ListView>