force-app/main/default/objects/Space__c/listViews/Cowork_Lockers.listView-meta.xml
<ListView>
    <fullName>Cowork_Lockers</fullName>
    <columns>NAME</columns>
    <columns>Locker_Size__c</columns>
    <columns>Status__c</columns>
    <columns>Checked_Out_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Space__c.Locker</value>
    </filters>
    <label>Cowork Lockers</label>
    <sharedTo>
        <group>Cowork_Team</group>
    </sharedTo>
</ListView>