force-app/main/default/objects/Space__c/listViews/Cowork_Rooms.listView-meta.xml
<ListView>
    <fullName>Cowork_Rooms</fullName>
    <columns>NAME</columns>
    <columns>Public_URL__c</columns>
    <columns>Calendar__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Space__c.Suite</value>
    </filters>
    <filters>
        <field>Reservation_Room_Type__c</field>
        <operation>equals</operation>
        <value>Conference Room,Podcast Booth</value>
    </filters>
    <label>Cowork Rooms</label>
    <sharedTo>
        <group>Cowork_Team</group>
    </sharedTo>
</ListView>