force-app/main/default/objects/Space__c/listViews/Desk_Hotel_All_Workstations.listView-meta.xml
<ListView>
    <fullName>Desk_Hotel_All_Workstations</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Occupant__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Space__c.Workstation</value>
    </filters>
    <label>Desk Hotel - All Workstations</label>
    <sharedTo>
        <group>BLDG_Team</group>
        <group>Leasing_Team</group>
        <group>SF_Admin_Team</group>
        <group>Tech_Support_Team</group>
    </sharedTo>
</ListView>